added a custom bibtex sytle

--- a/doc/bonsai.bib
+++ b/doc/bonsai.bib
@@ -1,68 +1,3 @@
-@misc { daVinciMachine,
-title = "The {Da Vinci Machine}",
-note = "\url{http://openjdk.java.net/projects/mlvm/}"
-}
-
-@misc { dlr,
-title = "{Dynamic Language Runtime}",
-note = "\url{http://www.codeplex.com/dlr}"
-}
-
-@misc { jruby,
-title = "{JR}uby",
-note = "\url{http://jruby.codehaus.org/}"
-}
-
-@misc { jython,
-title = "{J}ython",
-note = "\url{http://www.jython.org/}"
-}
-
-@misc { ironruby,
-title = "{I}ron{R}uby",
-note = "\url{http://www.ironruby.net/}"
-}
-
-@misc { ironpython,
-title = "{I}ron{P}ython",
-note = "\url{http://www.codeplex.com/IronPython}"
-}
-
-@misc { clhs_symbols,
-title = "{CLHS} \texttt{symbol} type",
-note = "\url{http://www.lispworks.com/documentation/HyperSpec/Body/t_symbol.htm#symbol}"
-}
-
-@misc { ruby_symbols,
-title = "Clasa \texttt{Symbol} din limbajul {R}uby",
-note = "\url{http://www.ruby-doc.org/core/classes/Symbol.html}"
-}
-
-@misc { io,
-title = "Limbajul {I}o",
-note = "\url{http://iolanguage.com}"
-}
-
-@misc { io_blocks,
-title = "Blocks în limbajul {I}o",
-note = "\url{http://iolanguage.com/scm/git/checkout/Io/docs/IoGuide.html#Objects-Blocks}"
-}
-
-@misc { smalltalk,
-title = "Limbajul {SmallTalk}",
-note = "\url{http://www.smalltalk.org/articles/article_20040000_11.html}"
-}
-
-@misc { antlr_tree_grammars,
-title = "{ANTLR} Tree Grammars",
-note = "\url{http://www.antlr.org/article/1100569809276/use.tree.grammars.tml}"
-}
-
-@misc { antlr,
-title = "The {ANTLR} Parser Generator",
-note = "\url{http://www.antlr.org}"
-}
-
 @book {definitive_antlr_reference,
 author = "Terence Parr",
 title = "The Definitive {ANTLR} Reference: Building Domain-Specific Languages",
@@ -70,60 +5,107 @@ publisher = "Pragmatic Bookshelf",
 year = "2007"
 }
 
-@misc { antlr_targets,
+@website { daVinciMachine,
+title = "The {Da Vinci Machine}",
+url = "http://openjdk.java.net/projects/mlvm/"
+}
+
+@website { dlr,
+title = "{Dynamic Language Runtime}",
+url = "http://www.codeplex.com/dlr"
+}
+
+@website { jruby,
+title = "{JR}uby",
+url = "http://jruby.codehaus.org/"
+}
+
+@website { jython,
+title = "{J}ython",
+url = "http://www.jython.org/"
+}
+
+@website { ironruby,
+title = "{I}ron{R}uby",
+url = "http://www.ironruby.net/"
+}
+
+@website { ironpython,
+title = "{I}ron{P}ython",
+url = "http://www.codeplex.com/IronPython"
+}
+
+@website { clhs_symbols,
+title = "{CLHS} \c{symbol} type",
+url = "http://www.lispworks.com/documentation/HyperSpec/Body/t_symbol.htm#symbol"
+}
+
+@website { ruby_symbols,
+title = "Clasa \c{Symbol} din limbajul {R}uby",
+url = "http://www.ruby-doc.org/core/classes/Symbol.html"
+}
+
+@website { io,
+title = "Limbajul {I}o",
+url = "http://iolanguage.com"
+}
+
+@website { io_blocks,
+title = "Blocks în limbajul {I}o",
+url = "http://iolanguage.com/scm/git/checkout/Io/docs/IoGuide.html#Objects-Blocks"
+}
+
+@website { smalltalk,
+title = "Limbajul {SmallTalk}",
+url = "http://www.smalltalk.org/articles/article_20040000_11.html"
+}
+
+@website { antlr_tree_grammars,
+title = "{ANTLR} Tree Grammars",
+url = "http://www.antlr.org/article/1100569809276/use.tree.grammars.tml"
+}
+
+@website { antlr,
+title = "The {ANTLR} Parser Generator",
+url = "http://www.antlr.org"
+}
+
+@website { antlr_targets,
 title = "{ANTLR3} Code Generation Targets",
-note = "\url{http://www.antlr.org/wiki/display/ANTLR3/Code+Generation+Targets}"
+url = "http://www.antlr.org/wiki/display/ANTLR3/Code+Generation+Targets"
 }
 
-@misc { linq_expressions,
+@website { linq_expressions,
 title = "The \texttt{System.Linq.Expressions} Namespace",
-note = "\url{http://msdn.microsoft.com/en-us/library/system.linq.expressions.aspx}"
+url = "http://msdn.microsoft.com/en-us/library/system.linq.expressions.aspx"
 }
 
-@misc { csharp_4_specs,
+@website { csharp_4_specs,
 title = "C\# 4.0 Specifications",
-note = "\url{http://download.microsoft.com/download/7/E/6/7E6A548C-9C20-4C80-B3B8-860FAF20887A/CSharp 4.0 Specification.doc}"
+url = "http://download.microsoft.com/download/7/E/6/7E6A548C-9C20-4C80-B3B8-860FAF20887A/CSharp 4.0 Specification.doc"
 }
 
-@misc { dynamic_meta_object,
+@website { dynamic_meta_object,
 title = "The \c{DynamicMetaObject} Class",
-note = "\url{http://msdn.microsoft.com/en-us/library/system.dynamic.dynamicmetaobject(VS.100).aspx}"
+url = "http://msdn.microsoft.com/en-us/library/system.dynamic.dynamicmetaobject(VS.100).aspx"
 }
 
-@misc { i_dynamic_meta_object_provider,
+@website { i_dynamic_meta_object_provider,
 title = "The \c{IDynamicMetaObjectProvider} Interface",
-note = "\url{http://msdn.microsoft.com/en-us/library/system.dynamic.idynamicmetaobjectprovider(VS.100).aspx}"
+url = "http://msdn.microsoft.com/en-us/library/system.dynamic.idynamicmetaobjectprovider(VS.100).aspx"
 }
 
-@inbook {antlr_book_treeconstruction,
-author = "Terrence Parr",
-title = "The Definitive {ANTLR} Reference: Building Domain-Specific Languages",
-publisher = "Pragmatic Bookshelf",
-year = "2007",
-chapter = "7",
-pages = "149-178"
-}
-
-@inbook {antlr_book_treegrammars,
-author = "Terrence Parr",
-title = "The Definitive {ANTLR} Reference: Building Domain-Specific Languages",
-publisher = "Pragmatic Bookshelf",
-year = "2007",
-chapter = "8",
-pages = "179-194"
-}
-
-@misc { expressions_trees_35,
+@website { expression_trees_35,
 title = "Expression Trees",
-note = "\url{http://msdn.microsoft.com/en-us/library/bb397951.aspx}"
+url = "http://msdn.microsoft.com/en-us/library/bb397951.aspx"
 }
 
-@misc { prototype_based_programming,
-title = "Wikipedia - Prototype-based Programming",
-note = "\url{http://en.wikipedia.org/wiki/Prototype-based_programming}"
+@website { prototype_based_programming,
+title = "{Prototype-based Programming - Wikipedia}",
+url = "http://en.wikipedia.org/wiki/Prototype-based_programming"
 }
 
-@misc { python_classes,
-title = "Python Classes - Private Variables",
-note = "\url{http://docs.python.org/tutorial/classes.html#private-variables}"
+@website { python_classes,
+title = "{P}ython {C}lasses - {P}rivate {V}ariables",
+url = "http://docs.python.org/tutorial/classes.html#private-variables"
 }
